--- a/ErolAksoyResume.MVC.UI/Areas/Admin/Views/Resume/Create.cshtml
+++ b/ErolAksoyResume.MVC.UI/Areas/Admin/Views/Resume/Create.cshtml
@@ -48,49 +48,69 @@
                 </div>
             </div>
 
-            <div class="position-relative row form-group">
-                <label asp-for="@Model.CategoryId" class="col-sm-2 col-form-label">Base Category</label>
-                <div class="col-sm-10">
-                    <select id="CategoryId" class=" form-control" asp-items="@Model.CategoryList">
-                        <option hidden value="-1">-- Select Base Category --</option>
-                    </select>
-                    <span asp-validation-for="@Model.CategoryId" class="text-danger"></span>
-                </div>
+            @*<div class="position-relative row form-group">
+            <label asp-for="@Model.CategoryId" class="col-sm-2 col-form-label">Base Category</label>
+            <div class="col-sm-10">
+                <select id="CategoryId" class=" form-control" asp-items="@Model.CategoryList">
+                    <option hidden value="-1">-- Select Base Category --</option>
+                </select>
+                <span asp-validation-for="@Model.CategoryId" class="text-danger"></span>
             </div>
+        </div>
 
-            <div class="position-relative row form-group">
-                <label asp-for="@Model.CategoryId" class="col-sm-2 col-form-label">Sub Category</label>
-                <div class="col-sm-10">
-                    <span asp-validation-for="@Model.SubCategoryId" class="text-danger"></span>
-                    <select id="SubCategoryId" asp-for="@Model.SubCategoryId" asp-items="@(new SelectList(string.Empty,"Id","Name"))" class="form-control">
-                    </select>
-                </div>
+        <div class="position-relative row form-group">
+            <label asp-for="@Model.CategoryId" class="col-sm-2 col-form-label">Sub Category</label>
+            <div class="col-sm-10">
+                <span asp-validation-for="@Model.SubCategoryId" class="text-danger"></span>
+                <select id="SubCategoryId" asp-for="@Model.SubCategoryId" asp-items="@(new SelectList(string.Empty,"Id","Name"))" class="form-control">
+                </select>
             </div>
+        </div>*@
 
+            <div class="card mb-3">
+                <div class="card-header">Options</div>
 
+                <div class="card-body">
+                    <div class="custom-checkbox row custom-control form-group ">
+                        <div class="col-md-4">
+                            <input type="checkbox" id="exampleCustomCheckbox" asp-for="@Model.IsDraft" class="custom-control-input">
+                            <label class="custom-control-label" for="exampleCustomCheckbox">
+                                Add to Draft
+                            </label>
+                        </div>
+                    </div>
 
-            <div class="custom-checkbox row custom-control form-group">
-                <div class="col-md-4">
-                    <input type="checkbox" id="exampleCustomCheckbox" asp-for="@Model.IsDraft" class="custom-control-input">
-                    <label class="custom-control-label" for="exampleCustomCheckbox">
-                        Add to Draft
-                    </label>
+                    <div class="custom-checkbox row custom-control form-group ">
+                        <div class="col-md-4">
+                            <input type="checkbox" id="exampleCustomCheckbox1" asp-for="@Model.IsWork" class="custom-control-input">
+                            <label class="custom-control-label" for="exampleCustomCheckbox1">
+                                Add to Work
+                            </label>
+                        </div>
+                    </div>
+
+                    <div class="custom-checkbox row custom-control form-group ">
+                        <div class="col-md-4">
+                            <input type="checkbox" id="exampleCustomCheckbox2" asp-for="@Model.IsEducation" class="custom-control-input">
+                            <label class="custom-control-label" for="exampleCustomCheckbox2">
+                                Add to Education
+                            </label>
+                        </div>
+                    </div>
 
                 </div>
-            </div>
+            </div><!--cardEnd-->
 
             <div class="position-relative row">
                 <button type="submit" class="btn btn-primary col-md-6 ">Save</button>
                 <a asp-action="Index" asp-controller="Resume" class="btn btn-warning col-md-6 float-right">Cancel</a>
                 @*<div class="col-sm-10 offset-sm-2">
-                        <button class="btn btn-secondary">Submit</button>
-                    </div>*@
+                <button class="btn btn-secondary">Submit</button>
+            </div>*@
             </div>
         </form>
     </div>
-
 </div>
-
 
 
 @section JavaScript{
@@ -137,9 +157,7 @@
                 changeMonth: true,
 
             });
-
         });
-
     </script>
 
     <script>
